--- a/plugin.yml
+++ b/plugin.yml
@@ -1,6 +1,6 @@
 name: SpecializedCrates
 author: Ztowne13
-version: 2.8.3.1 SNAP 3
+version: 2.8.3.1
 main: me.ztowne13.customcrates.CustomCrates
 description: A 100% customizable crate plugin for your server.
 softdepend: [HolographicDisplays,IndividualHolograms,Holograms,Citizens]
