--- a/config.yml
+++ b/config.yml
@@ -67,7 +67,7 @@ require-key-lore: false
 #           Crate Action Settings           #
 #-------------------------------------------#
 
-# Referring to the Action Bar, Title, and/or Subtitle...
+# Referring to the Action Bar, TitleV1_7_8_9_10, and/or Subtitle...
 
 # How long would you like the message to take, in seconds, to fade in?
 fade-in-time: 0
