--- a/plugin.yml
+++ b/plugin.yml
@@ -1,7 +1,8 @@
 name: SpecializedCrates
 author: Ztowne13
-version: 2.8.3.2
+version: 2.8.3.3 SNAP 2
 main: me.ztowne13.customcrates.CustomCrates
+api-version: 1.13
 description: A 100% customizable crate plugin for your server.
 softdepend: [HolographicDisplays,IndividualHolograms,Holograms,Citizens]
 commands:
