--- a/plugin.yml
+++ b/plugin.yml
@@ -1,6 +1,6 @@
 name: SpecializedCrates
 author: Ztowne13
-version: 2.8.3.3 SNAP 2
+version: 2.8.3.3
 main: me.ztowne13.customcrates.CustomCrates
 api-version: 1.13
 description: A 100% customizable crate plugin for your server.
