IGC misc updates
- If there is 1 tier, it will skip the tier selector
- Added 'info' to Rewards.YML and particle editors
- Added glow ability to be customized in-game
- Added displayName and rarity defaults
- Creating a new reward properly detects what values are needed

--- a/CrateConfig.yml
+++ b/CrateConfig.yml
@@ -1,4 +1,9 @@
 CrateType:
+  Block:
+    OpenChest:
+      inv-name: '&8&l> &6&l%crate%'
+      chest-open-duration: 60
+      chest-open-sound: true
   Inventory:
     Roulette:
       inv-name: '&8&l> &6&l%crate%'
