Holograms update + OpenChestAnimation
- Redid Holograms IGC
  * Added customization animation type, animation speed, animation frames,
    reward holo duration, reward holo yoffset
- TEXT_CHANGE is no longer a prefix, it modifies first line
- Added reward-hologram-duration
- Added reward-hologram-yoffset

- Added "errors" block in crate's config
- Fixed an issue causing new crates to throw an error on first-load.

- Added the open chest animation to the IGC

--- a/config.yml
+++ b/config.yml
@@ -70,7 +70,7 @@ auto-close: true
 #           Crate Action Settings           #
 #-------------------------------------------#
 
-# Referring to the Action Bar, TitleV1_7_8_9_10, and/or Subtitle...
+# Referring to the Action Bar, Title, and/or Subtitle...
 
 # How long would you like the message to take, in seconds, to fade in?
 fade-in-time: 0
@@ -80,9 +80,6 @@ stay-time: 4
 
 # How long would you like the message to take, in seconds, to fade out?
 fade-out-time: 1
-
-# How long would you like the reward hologram to stay up for in seconds?
-reward-hologram-length: 3
 
 #-------------------------------------------#
 #           Lucky Crate Settings            #
