--- a/CrateConfig.yml
+++ b/CrateConfig.yml
@@ -1,9 +1,9 @@
 CrateType:
   Block:
     OpenChest:
-      inv-name: '&8&l> &6&l%crate%'
       chest-open-duration: 60
-      chest-open-sound: true
+      early-reward-hologram: true
+      reward-hologram-delay: 9
   Inventory:
     Roulette:
       inv-name: '&8&l> &6&l%crate%'
