Added early open actions
- Open Chest animation displays sounds, particles, fireworks, actions
  before the chest is opened, opposed to after.
- Added early-open-actions to config / animation / IGC

--- a/CrateConfig.yml
+++ b/CrateConfig.yml
@@ -5,6 +5,7 @@ CrateType:
       early-reward-hologram: true
       reward-hologram-delay: 0
       reward-holo-attach-to-item: true
+      early-open-actions: false
   Inventory:
     Roulette:
       inv-name: '&8&l> &6&l%crate%'
