--- a/CrateConfig.yml
+++ b/CrateConfig.yml
@@ -6,6 +6,12 @@ CrateType:
       reward-hologram-delay: 0
       reward-holo-attach-to-item: true
       early-open-actions: false
+    OpenChestRolling:
+      chest-open-duration: 60
+      early-reward-hologram: true
+      reward-hologram-delay: 0
+      reward-holo-attach-to-item: true
+      early-open-actions: false
   Inventory:
     Roulette:
       inv-name: '&8&l> &6&l%crate%'
