--- a/plugin.yml
+++ b/plugin.yml
@@ -4,7 +4,7 @@ version: 2.8.5.4
 main: me.ztowne13.customcrates.CustomCrates
 api-version: 1.13
 description: A 100% customizable crate plugin for your server.
-softdepend: [HolographicDisplays,IndividualHolograms,Holograms,Citizens]
+softdepend: [HolographicDisplays,IndividualHolograms,Holograms,Citizens,CMI]
 commands:
   scrates:
     description: All commands for the specialized crates plugin.
