--- a/Messages.yml
+++ b/Messages.yml
@@ -8,9 +8,9 @@ denied-use-crate: '&4&lERROR! &cThis crate is not obtainable by being placed.'
 no-key-use: '&4&lERROR! &cThis crate is not openable by using a key.'
 deny-creative-mode: '&4&lERROR! &cThis action cannot be performed in Creative Mode.'
 deny-place-key: '&4&lERROR! &cYou do not have permission to place a key.'
-cooldown-start: '&9&lNOTICE! &bThe %crate% crate is now on cooldown for %seconds%.'
+cooldown-start: '&9&lNOTICE! &bThe %crate% crate is now on cooldown for %days% days, %hours% hours, %minutes% minutes, %seconds% seconds.'
 cooldown-end: '&9&lNOTICE! &bYou no longer have a cooldown for the %crate% crate.'
-crate-on-cooldown: '&4&lERROR! &cThe %crate% crate is on cooldown for %seconds%.'
+crate-on-cooldown: '&4&lERROR! &cThe %crate% crate is on cooldown for for %days% days, %hours% hours, %minutes% minutes, %seconds% seconds..'
 found-lucky-chest: '&9&lNOTICE! &bYou have discovered a lucky chest!'
 wait-one-second: '&4&lERROR! &cYou must wait 1 second to perform this action.'
 crate-disabled: '&4&lERROR! &cThis crate is disabled and cannot be used.'
