Added shift-click to open all
- If a player shift clicks a crate, it will use all of the physical
  keys in hand and virtual keys until the inventory is full. It will
  play the default OPEN events (excluding actions and the reward holo).
- Update GIVE_KEY animation to actually log history
- Fixed bug with PlaceholderAPI where it would still update on soft
  plugin reload.
- Added 'confirm-open' value to Config.YML that dictates whether or not
  the player will be asked to confirm to open the crate.
- Added 'shift-click-open-all-virtual' value to Config.YML that dictates
  whether or not virtual keys can all be used at once with shift-click.
- Added 'shift-click-open-all-physical' value to Config.YML that
  dictates whether or not physical keys can all be used at once with
  shift-click.
- Added 'shift-click-confirm' to Config.YML that dictates whether or not
  the player will be asked to confirm to use all their keys at once
  with shift-click.

TODO:
- Implement usage of confirm-open
- Implement usage of shift-click-open-all-virtual/physical
- Implement usage of shift-click-confirm

--- a/config.yml
+++ b/config.yml
@@ -37,6 +37,9 @@ debug: false
 #           Crate Settings           #
 #------------------------------------#
 
+# Should the player have to confirm to open the crate or not?
+confirm-open: false
+
 # How many open inventory slots are required to open a crate?
 required-slots: 1
 
@@ -65,6 +68,22 @@ require-key-lore: false
 
 # Should the crates automatically close when their animations is done playing?
 auto-close: true
+
+# Should shift clicking allow the user to open a crate with every key the
+#   player is holding?
+#  NOTE: Skipping the animation by using every key at once only gives 1 rewards per
+#    key, regardless of the animation type.
+shift-click-open-all-physical: true
+
+# Should shift clicking allow the user to open a crate with every virtual key
+#   the player is holding.
+#  NOTE: Skipping the animation by using every key at once only gives 1 rewards per
+#    key, regardless of the animation type.
+shift-click-open-all-virtual: false
+
+# Should the player have to shift click the crate again to confirm opening
+#   it with every key / virtual key?
+shift-click-confirm: true
 
 #-------------------------------------------#
 #           Crate Action Settings           #
