--- a/Messages.yml
+++ b/Messages.yml
@@ -20,3 +20,5 @@ toggle-luckycrate: '&2&lSUCCESS! &aYou have toggled luckycrates to %state%.'
 no-permission-crate: '&4&lERROR! &cYou do not have the permission to use this crate.'
 opening-virtualcrates: '&2&lSUCCESS! &aOpening the virtual crates menu.'
 insufficient-virtual-crates: '&4&lERROR! &cYou do not have enough virtual crates to open this.'
+confirm-open-all: '&6&lINFO: &eConfirm opening ALL KEYS AT ONCE by shift-clicking again. This will cancel after %timeout% seconds.'
+confirm-open: '&6&lINFO: &eConfirm opening crate by clicking again. This will cancel after %timeout% seconds.'
