Added MySQL Support
- Added MySQL DataHandler
  * Cooldowns, virtual crates/keys, history in SQL
  * Creates table and everything
- Added SQL.yml file with database login information
- Added 'loading-from-database' message to stop players from using
  crates until their information is loaded from the database.
- Changed the offline-give-commands to be given after a player's info
  is loaded, not just on join.

--- a/Messages.yml
+++ b/Messages.yml
@@ -22,3 +22,4 @@ opening-virtualcrates: '&2&lSUCCESS! &aOpening the virtual crates menu.'
 insufficient-virtual-crates: '&4&lERROR! &cYou do not have enough virtual crates to open this.'
 confirm-open-all: '&6&lINFO: &eConfirm opening ALL KEYS AT ONCE by shift-clicking again. This will cancel after %timeout% seconds.'
 confirm-open: '&6&lINFO: &eConfirm opening crate by clicking again. This will cancel after %timeout% seconds.'
+loading-from-database: '&6&lINFO: &ePlease wait till your information is loaded.'
