Fixed an issue causing some crates to not load
- Fixed an issue that caused crates placed in a different world to
  occasionally attempt to load before Multiverse loads the worlds.

--- a/plugin.yml
+++ b/plugin.yml
@@ -1,10 +1,10 @@
 name: SpecializedCrates
 author: Ztowne13
-version: 2.9.2.3
+version: 2.9.2.4
 main: me.ztowne13.customcrates.SpecializedCrates
 api-version: 1.13
 description: A 100% customizable crate plugin for your server.
-softdepend: [HolographicDisplays,IndividualHolograms,Holograms,Citizens,CMI,PlaceholderAPI]
+softdepend: [HolographicDisplays,IndividualHolograms,Holograms,Citizens,CMI,PlaceholderAPI,Multiverse-Core]
 commands:
   scrates:
     description: All commands for the specialized crates plugin.
