Added economy support
- Added economy checker to all crates, including Dynamic and MultiCrate
- Fixed an issue that caused the "fail to open" message not be
  suppressed when it should be.
- Added (Xms) marker to reload button
- Added 'economy-not-enough-money' for when a crate is too expensive to
  be opened.
- SoftDepend Vault

--- a/Messages.yml
+++ b/Messages.yml
@@ -27,3 +27,4 @@ placeholder-seconds: 'seconds'
 placeholder-minutes: 'minutes'
 placeholder-hours: 'hours'
 placeholder-days: 'days'
+economy-not-enough-money: '&4&lERROR: &cYou do not have enough money, you need %amount% and are %short% short.'
