--- a/plugin.yml
+++ b/plugin.yml
@@ -4,7 +4,7 @@ version: 2.9.2.4
 main: me.ztowne13.customcrates.SpecializedCrates
 api-version: 1.13
 description: A 100% customizable crate plugin for your server.
-softdepend: [HolographicDisplays,IndividualHolograms,Holograms,Citizens,CMI,PlaceholderAPI,Multiverse-Core]
+softdepend: [HolographicDisplays,IndividualHolograms,Holograms,Citizens,CMI,PlaceholderAPI,Multiverse-Core,Vault]
 commands:
   scrates:
     description: All commands for the specialized crates plugin.
