Added a bunch of stuff to stop people from removing demo-features

--- a/plugin.yml
+++ b/plugin.yml
@@ -1,4 +1,4 @@
-name: SpecializedCrates
+name: SpecializedCrates-Demo
 author: Ztowne13
 version: 2.10.0.2
 main: me.ztowne13.customcrates.SpecializedCrates
