Added /rewards command
- Added /rewards [crate name] command that opens the reward
  display menu for a crate (perm: customcrates.rewards)
- Added tab-completer for /rewards
- Added command-rewards-usage, command-rewards-opening, and
  command-rewards-invalid-crate messages to Messages.YML
- Fixed an issue that caused default messages to not propagate
  immediately.

--- a/Messages.yml
+++ b/Messages.yml
@@ -28,3 +28,6 @@ placeholder-minutes: 'minutes'
 placeholder-hours: 'hours'
 placeholder-days: 'days'
 economy-not-enough-money: '&4&lERROR: &cYou do not have enough money, you need %amount% and are %short% short.'
+command-rewards-usage: '&4&lERROR: &cUsage: /rewards [crate name]'
+command-rewards-opening: '&6&lINFO: &eOpening reward preview for %crate% crate.'
+command-rewards-invalid-crate: '&4&lERROR: &c%crate% is not a valid crate.'
