--- a/Rewards.yml
+++ b/Rewards.yml
@@ -1,137 +1,196 @@
 Diamond:
-  name: 'Diamond'
   commands:
     - give {name} minecraft:diamond 1
-  item: DIAMOND;0
-  glow: true
   chance: 10
   rarity: rare
   give-display-item:
     value: false
+  display-item:
+    material: DIAMOND
+    glow: true
+    amount: 1
+    name: '&cDiamond'
+    lore:
+      - '&7-'
+      - '&eChance: &6%writtenchance%%'
 Dirt:
-  name: 'Dirt'
-  item: DIRT;0
-  lore:
-    - '&5This is a &a&lcustom lore!'
-    - '&c&oMake me unique to the default lore'
-    - '&c&oThat you can set in the config.yml'
-  glow: true
   chance: 20
   rarity: common
   give-display-item:
     value: true
     with-lore: false
+  display-item:
+    material: DIRT
+    glow: true
+    amount: 1
+    name: '&cDirt'
+    lore:
+      - '&5This is a &a&lcustom lore!'
+      - '&c&oMake me unique to the default lore'
+      - '&c&oThat you can set in the config.yml'
 DiamondSword:
-  name: 'Diamond Sword'
-  enchantments:
-    - DURABILITY;10
-    - DAMAGE_ALL;5
-    - FIRE_ASPECT;2
-  item: DIAMOND_SWORD;0
   chance: 3
   rarity: legendary
   give-display-item:
     value: true
     with-lore: false
+  display-item:
+    material: DIAMOND_SWORD
+    glow: false
+    amount: 1
+    name: '&cDiamond Sword'
+    enchantments:
+      - DURABILITY;10
+      - DAMAGE_ALL;5
+      - FIRE_ASPECT;2
+    lore:
+      - '&7-'
+      - '&eChance: &6%writtenchance%%'
 MonsterEggsInAllVersions:
-  name: 'Monster-specific spawn eggs for all versions'
   commands:
     - give {name} minecraft:milk 1
-  item: CREEPER_SPAWN_EGG
   chance: 5
   rarity: legendary
   give-display-item:
     value: false
+  display-item:
+    material: CREEPER_SPAWN_EGG
+    glow: false
+    amount: 1
+    name: '&cMonster-specific spawn eggs for all versions'
+    lore:
+      - '&7-'
+      - '&eChance: &6%writtenchance%%'
+    nbt-tags:
+      - EntityTag CREEPER
 Speed:
-  name: 'Speed Effect and Potion'
   commands:
     - effect {name} 1 60 1
     - give {name} minecraft:milk 1
-  item: POTION
-  potion-effects:
-    - SPEED;0;0
   chance: 5
   rarity: legendary
   give-display-item:
     value: true
     with-lore: false
+  display-item:
+    material: POTION
+    glow: false
+    amount: 1
+    name: '&cSpeed Effect and Potion'
+    potion-effects:
+      - SPEED;0;0
+    lore:
+      - '&7-'
+      - '&eChance: &6%writtenchance%%'
 SuperGoldenApple:
-  name: 'Super Golden Apple'
-  item: GOLDEN_APPLE;1
   chance: 7
   rarity: legendary
   give-display-item:
     value: true
     with-lore: false
+  display-item:
+    material: GOLDEN_APPLE
+    glow: false
+    amount: 1
+    name: '&cSuper Golden Apple'
+    lore:
+      - '&7-'
+      - '&eChance: &6%writtenchance%%'
 GoldenApple:
-  name: 'Golden Apple'
-  item: GOLDEN_APPLE;0
   chance: 10
   rarity: legendary
   give-display-item:
     value: true
     with-lore: false
+  display-item:
+    material: GOLDEN_APPLE
+    glow: false
+    amount: 1
+    name: '&cGolden Apple'
+    lore:
+      - '&7-'
+      - '&eChance: &6%writtenchance%%'
 Grass:
-  name: 'Grass'
   commands:
     - give {name} minecraft:grass
-  item: GRASS;0
-  glow: true
   chance: 20
   rarity: common
   give-display-item:
     value: true
     lore: false
+  display-item:
+    material: GRASS
+    glow: true
+    amount: 1
+    name: '&cGrass'
+    lore:
+      - '&7-'
+      - '&eChance: &6%writtenchance%%'
 SpecialDirt:
-  name: 'Special Dirt'
   commands:
     - give {name} minecraft:dirt 1
-  item: DIRT;1
-  lore:
-    - '&6I'
-    - '&eam'
-    - '&cspecial!'
-    - '&7-'
-    - '&eChance: &6%writtenchance%%'
   chance: 15
   rarity: uncommon
   give-display-item:
     value: true
     with-lore: false
+  display-item:
+    material: DIRT
+    glow: false
+    amount: 1
+    name: '&cSpecial Dirt'
+    lore:
+      - '&6I'
+      - '&eam'
+      - '&cspecial!'
+      - '&7-'
+      - '&eChance: &6%writtenchance%%'
 Jump:
-  name: 'Jump Potion Effect'
   commands:
     - effect {name} 8 60 1
     - give {name} minecraft:milk_bucket 1
-  item: POTION
-  potion-effects:
-    - JUMP;0;0
   chance: 7
   rarity: rare
   give-display-item:
     value: false
+  display-item:
+    material: POTION
+    glow: false
+    amount: 1
+    name: '&cJump Potion Effect'
+    potion-effects:
+      - JUMP;0;0
+    lore:
+      - '&7-'
+      - '&eChance: &6%writtenchance%%'
 SpecialDirt2:
-  name: 'More Special Dirt'
-  item: DIRT;2
-  lore:
-    - ''
-    - '&4&lSUPER RARE: &6%writtenchance%% &lCHANCE'
-    - ''
-    - '&7Get Special Dirt if you win this!'
   chance: 10
   rarity: rare
   give-display-item:
     value: true
     with-lore: false
+  display-item:
+    material: DIRT
+    glow: false
+    amount: 1
+    name: '&cMore Special Dirt'
+    lore:
+      - ''
+      - '&4&lSUPER RARE: &6%writtenchance%% &lCHANCE'
+      - ''
+      - '&7Get Special Dirt if you win this!'
 MyHead:
-  name: 'Ztowne13s Head'
-  item: PLAYER_HEAD
-  head-player-name: Ztowne13
-  glow: false
-  amount: 1
   chance: 1.0
   rarity: '1'
   give-display-item:
     value: true
     with-lore: false
-  
+  display-item:
+    material: PLAYER_HEAD
+    glow: false
+    amount: 1
+    player-head-name: Ztowne13
+    name: '&cZtowne13s Head'
+    lore:
+      - '&7-'
+      - '&eChance: &6%writtenchance%%'
