Fixed an item issue in 1.8.8 - Fixed an issue that caused items like WET_SPONGE and ENCHANTED_GOLDEN_APPLE to not work (Fixes #272)

--- a/Rewards.yml
+++ b/Rewards.yml
@@ -89,7 +89,7 @@ SuperGoldenApple:
     value: true
     with-lore: false
   display-item:
-    material: GOLDEN_APPLE
+    material: ENCHANTED_GOLDEN_APPLE
     glow: false
     amount: 1
     name: '&cSuper Golden Apple'
