Added ability to display the amount for 'receive-key' and 'receive-virtual-key' messages - Use %amount% to display the quantity of keys given for either of those messages (Fixes #274)

--- a/Messages.yml
+++ b/Messages.yml
@@ -34,5 +34,5 @@ command-rewards-usage: '&4&lERROR: &cUsage: /rewards [crate name]'
 command-rewards-opening: '&6&lINFO: &eOpening reward preview for %crate% crate.'
 command-rewards-invalid-crate: '&4&lERROR: &c%crate% is not a valid crate.'
 cant-craft-keys: '&4&lERROR: &cYou are not allowed to craft keys.'
-received-key: '&2&lSUCCESS! &aYou just received a %crate% key!'
-received-virtual-key: '&2&lSUCCESS! &aYou just received a virtual %crate% key!'
+received-key: '&2&lSUCCESS! &aYou just received %amount% %crate% key(s)!'
+received-virtual-key: '&2&lSUCCESS! &aYou just received %amount% virtual %crate% key(s)!'
