Fixed a bugs with DYNAMIC/STATIC crates - Fixed DYNAMIC crates with require-key set to false not opening immediately - Fixed STATIC crates being placeable by users without permissions (Fixes #288) - Updated default 'denied-use-crate' message

--- a/Messages.yml
+++ b/Messages.yml
@@ -7,7 +7,7 @@ inventory-too-full: '&4&lERROR! &cYour inventory is too full.'
 placed-crate: '&2&lSUCCESS! &aYou have placed the %crate% crate!'
 broken-crate: '2&lSUCCESS! &aYou have broken a %crate%.'
 failed-break-crate: '&4&lERROR! &cYou failed to break the %crate% because it is %reason%.'
-denied-use-crate: '&4&lERROR! &cThis crate is not obtainable by being placed.'
+denied-use-crate: '&4&lERROR! &cYou do not have permission to use/place this crate.'
 no-key-use: '&4&lERROR! &cThis crate is not openable by using a key.'
 deny-creative-mode: '&4&lERROR! &cThis action cannot be performed in Creative Mode.'
 deny-place-key: '&4&lERROR! &cYou do not have permission to place a key.'
