--- a/Messages.yml
+++ b/Messages.yml
@@ -36,3 +36,4 @@ command-rewards-invalid-crate: '&4&lERROR: &c%crate% is not a valid crate.'
 cant-craft-keys: '&4&lERROR: &cYou are not allowed to craft keys.'
 received-key: '&2&lSUCCESS! &aYou just received %amount% %crate% key(s)!'
 received-virtual-key: '&2&lSUCCESS! &aYou just received %amount% virtual %crate% key(s)!'
+given-fallback-reward: '&6&lINFO: &eYou already have the %reward% &ereward, so you have been given the %fallbackreward% &ereward instead.'
