Added ability to use displayname for %crate% - Added 'use-crate-name-for-display' value to config.yml that, when set to true, all %crate% variables will be replaced with the crate item's name opposed to the crate's file name. - Updated all %crate% placed to be replaced with getDisplayName() instead of getName()

--- a/config.yml
+++ b/config.yml
@@ -106,6 +106,10 @@ keep-crate-block-consistent: true
 # How many blocks away should players be able to see particles?
 particle-view-distance: 25
 
+# Should any %crate% placeholders use the crate item's display name instead of
+#  of the crate name?
+use-crate-name-for-display: true
+
 #-------------------------------------------#
 #           Crate Action Settings           #
 #-------------------------------------------#
