--- a/Messages.yml
+++ b/Messages.yml
@@ -1,19 +1,19 @@
 # Set a message to 'none' to have it display nothing
 
 no-permissions: '&4&lERROR! &cYou do not have the correct permission: %permission%'
-fail-open: '&4&lERROR! &cYou need the %key% &cto open the %crate% crate!'
+fail-open: '&4&lERROR! &cYou need the %key% &cto open the %crate% &ccrate!'
 already-opening-crate: '&4&lERROR! &cYou are already opening a crate, you must wait until it is done!'
 inventory-too-full: '&4&lERROR! &cYour inventory is too full.'
-placed-crate: '&2&lSUCCESS! &aYou have placed the %crate% crate!'
-broken-crate: '2&lSUCCESS! &aYou have broken a %crate%.'
-failed-break-crate: '&4&lERROR! &cYou failed to break the %crate% because it is %reason%.'
+placed-crate: '&2&lSUCCESS! &aYou have placed the %crate% &acrate!'
+broken-crate: '2&lSUCCESS! &aYou have broken a %crate%&a.'
+failed-break-crate: '&4&lERROR! &cYou failed to break the %crate%&c because it is %reason%.'
 denied-use-crate: '&4&lERROR! &cYou do not have permission to use/place this crate.'
 no-key-use: '&4&lERROR! &cThis crate is not openable by using a key.'
 deny-creative-mode: '&4&lERROR! &cThis action cannot be performed in Creative Mode.'
 deny-place-key: '&4&lERROR! &cYou do not have permission to place a key.'
-cooldown-start: '&9&lNOTICE! &bThe %crate% crate is now on cooldown for %days% days, %hours% hours, %minutes% minutes, %seconds% seconds.'
-cooldown-end: '&9&lNOTICE! &bYou no longer have a cooldown for the %crate% crate.'
-crate-on-cooldown: '&4&lERROR! &cThe %crate% crate is on cooldown for for %days% days, %hours% hours, %minutes% minutes, %seconds% seconds..'
+cooldown-start: '&9&lNOTICE! &bThe %crate% &bcrate is now on cooldown for %days% days, %hours% hours, %minutes% minutes, %seconds% seconds.'
+cooldown-end: '&9&lNOTICE! &bYou no longer have a cooldown for the %crate% &bcrate.'
+crate-on-cooldown: '&4&lERROR! &cThe %crate% &ccrate is on cooldown for for %days% days, %hours% hours, %minutes% minutes, %seconds% seconds..'
 found-lucky-chest: '&9&lNOTICE! &bYou have discovered a lucky chest!'
 wait-one-second: '&4&lERROR! &cYou must wait 1 second to perform this action.'
 crate-disabled: '&4&lERROR! &cThis crate is disabled and cannot be used.'
@@ -31,9 +31,9 @@ placeholder-hours: 'hours'
 placeholder-days: 'days'
 economy-not-enough-money: '&4&lERROR: &cYou do not have enough money, you need %amount% and are %short% short.'
 command-rewards-usage: '&4&lERROR: &cUsage: /rewards [crate name]'
-command-rewards-opening: '&6&lINFO: &eOpening reward preview for %crate% crate.'
-command-rewards-invalid-crate: '&4&lERROR: &c%crate% is not a valid crate.'
+command-rewards-opening: '&6&lINFO: &eOpening reward preview for %crate% &ecrate.'
+command-rewards-invalid-crate: '&4&lERROR: &c%crate% &cis not a valid crate.'
 cant-craft-keys: '&4&lERROR: &cYou are not allowed to craft keys.'
-received-key: '&2&lSUCCESS! &aYou just received %amount% %crate% key(s)!'
-received-virtual-key: '&2&lSUCCESS! &aYou just received %amount% virtual %crate% key(s)!'
+received-key: '&2&lSUCCESS! &aYou just received %amount% %crate%&a key(s)!'
+received-virtual-key: '&2&lSUCCESS! &aYou just received %amount% virtual %crate%&a key(s)!'
 given-fallback-reward: '&6&lINFO: &eYou already have the %reward% &ereward, so you have been given the %fallbackreward% &ereward instead.'
